rearranged onionshare_gui files, made it work better with packaging

--- a/onionshare_gui/html/index.html
+++ b/onionshare_gui/html/index.html
@@ -6,7 +6,7 @@
     <body>
         <h1><span class="skull">&#9760;</span> <span id="basename">...</span></h1>
         <div id="url-wrapper">
-          <div id="url-header">Give this URL to the person you're sending the file to:</div>
+          <div id="give-this-url">Give this URL to the person you're sending the file to:</div>
           <div id="url"></div>
         </div>
         <div id="output">...</div>
