starting to build onionshare functionality into GUI

--- a/onionshare_gui/html/index.html
+++ b/onionshare_gui/html/index.html
@@ -9,7 +9,7 @@
           <div id="give-this-url">Give this URL to the person you're sending the file to:</div>
           <div id="url"></div>
         </div>
-        <div id="output">...</div>
+        <div id="output"></div>
 
         <script src="jquery-1.11.1.min.js"></script>
         <script src="onionshare.js"></script>
