made a "Copy URL" button, and improved design

--- a/onionshare_gui/html/index.html
+++ b/onionshare_gui/html/index.html
@@ -4,12 +4,9 @@
         <link rel="stylesheet" type="text/css" media="all" href="style.css" />
     </head>
     <body>
-        <h1><span class="skull">&#9760;</span> <span id="basename">...</span></h1>
-        <div id="url-wrapper">
-          <div id="give-this-url">Give this URL to the person you're sending the file to:</div>
-          <div id="url"></div>
-        </div>
+        <h1><span id="basename">...</span></h1>
         <div id="output"></div>
+        <button class="button" id="copy-button">Copy URL</button>
 
         <script src="jquery-1.11.1.min.js"></script>
         <script src="onionshare.js"></script>
