running async startup work in a separate thread, and design tweaks

--- a/onionshare_gui/html/index.html
+++ b/onionshare_gui/html/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" media="all" href="style.css" />
     </head>
     <body>
-        <h1><span id="basename">...</span></h1>
+        <h1><span id="basename"></span></h1>
         <div id="output"></div>
         <button class="button" id="copy-button">Copy URL</button>
 
