File transfers can now be reversed with the --receive flag when launching onionshare.py.  The receive_mode.html now has variables that allows it to be reused when the user sends the file.  The `except Exception as e` in `receive_file()` is just there in case I need to debug later.  This mode is not yet accessable with the GUI (though that is getting reworked so I don't know if I should try to get it to work with the current GUI) and there is no progress bar, but it is a good start for getting #97 done.

--- a/onionshare/receive_mode.html
+++ b/onionshare/receive_mode.html
@@ -61,15 +61,11 @@
                 top:1px;
             }
         </style>
-        <meta name="onionshare-filename" content="{{ filename }}">
-        <meta name="onionshare-filesize" content="{{ filesize }}">
-        <meta name="onionshare-filehash" content="{{ filehash }}">
     </head>
     <body>
     <form enctype="multipart/form-data" action="/send/function" method="post">
-        <p>The upload function will not do anything if the host has not enabled Onionshare to receive files.
-        <p><input type=file name=file>
-           <input class="button" type=submit value=Upload>
+        <p>{{info}}
+        <p>{{button_code}}
         </form>
         </div>
     </body>
