Changed 404 page to just say "404" (fixes #225)

--- a/onionshare/404.html
+++ b/onionshare/404.html
@@ -7,9 +7,9 @@
                 background-color: #FFC4D5;
                 color: #FF0048;
                 text-align: center;
-                font-size: 30em;
+                font-size: 20em;
             }
         </style>
     </head>
-    <body>&#9760;</body>
+    <body>404</body>
 </html>
