Add onionshare favicon to all HTML pages

--- a/share/html/404.html
+++ b/share/html/404.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Error 404</title>
+        <link href="data:image/x-icon;base64,{{favicon_b64}}" rel="icon" type="image/x-icon" />
         <style type="text/css">
             body {
                 background-color: #FFC4D5;
