--- a/share/html/denied.html
+++ b/share/html/denied.html
@@ -2,6 +2,7 @@
 <html>
   <head>
       <title>OnionShare</title>
+      <link href="data:image/x-icon;base64,{{favicon_b64}}" rel="icon" type="image/x-icon" />
       <style>
         body {
           background-color: #222222;
@@ -15,4 +16,4 @@
   <body>
     <p>OnionShare download in progress</p>
   </body>
-</html> 
+</html>
